added all html elements including images

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DADA</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <img id="logo" src="./images/DadaLogoNavy.8257a177.svg" alt="">
-        <div class="button1">Login</div>
+      <img id="logo" src="./images/DadaLogoNavy.8257a177.svg" alt="DADA logo" />
+      <div class="button1">Login</div>
     </nav>
 
     <main>
-        <h2>A parenting coach in your pocket</h2>
-        <img src="./images/device mockup 1.svg" alt="">
+      <h2>A parenting coach in your pocket</h2>
+      <img src="./images/device mockup 1.svg" alt="Device mockup" />
+      <h3>Most parenting resources are built with moms in mind.</h3>
+      <h4>We've created one for you dad</h4>
+      <h5>
+        We want to empower fathers to parent with confidence and enjoy more
+        quality time with their kids.
+      </h5>
+      <div class="button">Get Dadvice</div>
+      <h3>Here you will find:</h3>
+
+      <div class="paragraph-picture">
+        <p>Low-effort activity ideas to suit your mood and budget</p>
+        <img src="./images/penguin1.svg" alt="" />
+      </div>
+
+      <div class="paragraph-picture">
+        <p>Low-effort activity ideas to suit your mood and budget</p>
+        <img src="./images/penguin2.svg" alt="" />
+      </div>
+
+      <div class="paragraph-picture">
+        <p>Low-effort activity ideas to suit your mood and budget</p>
+        <img src="./images/penguin3.svg" alt="" />
+      </div>
+
+      <div class="button">Sign Up</div>
     </main>
-    
-</body>
+
+    <footer>
+        <p>Contact Us</p>
+        <p>Privacy</p>
+        <p>Terms</p>
+    </footer>
+  </body>
 </html>
