changes p tags to span as inline elements required for proper alignment

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -24,19 +24,21 @@
       <div class="button">Get Dadvice</div>
       <h3>Here you will find:</h3>
 
+      <!-- p and h tags are block level elements, use an inline element such as span to align with image  -->
+
       <div class="paragraph-picture">
-        <p>Low-effort activity ideas to suit your mood and budget</p>
+        <span>Low-effort activity ideas to suit your mood and budget</span>
         <img src="./images/penguin1.svg" alt="" />
       </div>
 
       <div class="paragraph-picture">
-        <p>Low-effort activity ideas to suit your mood and budget</p>
+        <span>Low-effort activity ideas to suit your mood and budget</span>
         <img src="./images/penguin2.svg" alt="" />
       </div>
 
       <div class="paragraph-picture">
-        <p>Low-effort activity ideas to suit your mood and budget</p>
-        <img src="./images/penguin3.svg" alt="" />
+        <span>Low-effort activity ideas to suit your mood and budget</span>
+        <img src="./images/penguin3.svg" alt="Angry Penguin" />
       </div>
 
       <div class="button">Sign Up</div>
