further formatting changes

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <img id="logo" src="./images/DadaLogoNavy.8257a177.svg" alt="DADA logo" />
-      <div class="button1">Login</div>
+      <div id="login">Login</div>
     </nav>
 
     <main>
