resizing of elements to fit reference, adjustments to margin and button design

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -14,10 +14,10 @@
     </nav>
 
     <main>
-      <h2>A parenting coach in your pocket</h2>
+      <h2 class="text-highlight">A parenting coach in your pocket</h2>
       <img src="./images/device mockup 1.svg" alt="Device mockup" />
       <h3>Most parenting resources are built with moms in mind.</h3>
-      <h4>We've created one for you dad</h4>
+      <h4 class="text-highlight">We've created one for you, Dad!</h4>
       <h5>
         We want to empower fathers to parent with confidence and enjoy more
         quality time with their kids.
@@ -45,6 +45,13 @@
 
         <span>Low-effort activity ideas to suit your mood and budget</span>
         <img src="./images/penguin3.svg" alt="Angry Penguin" />
+
+      </div>
+
+      <div class="paragraph-picture">
+
+        <img src="./images/penguin4.svg" alt="Angry Penguin" />
+        <span>Low-effort activity ideas to suit your mood and budget</span>
 
       </div>
 
