more layout tweaks, problem with separation between two main body segments

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -14,6 +14,8 @@
     </nav>
 
     <main>
+      <div id="section-1">
+
       <h2 class="text-highlight">A parenting coach in your pocket</h2>
       <img src="./images/device mockup 1.svg" alt="Device mockup" />
       <h3>Most parenting resources are built with moms in mind.</h3>
@@ -25,7 +27,11 @@
       <div class="button">Get Dadvice</div>
       <h3>Here you will find:</h3>
 
+      </div>
+
       <!-- p and h tags are block level elements, use an inline element such as span to align with image  -->
+
+      <div id="section-2">
 
       <div class="paragraph-picture">
 
@@ -55,6 +61,8 @@
 
       </div>
 
+      </div>
+      
       <div class="button">Sign Up</div>
     </main>
 
